--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Five Star</title>
+	<title>Gustavo isidio</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,400,300,500,600" rel="stylesheet">
 		<!--
@@ -38,12 +38,12 @@
 							<a href="index.html"><img src="img/logo.png" alt=""></a>
 						</div>
 						<div class="main-menubar d-flex align-items-center">
-							<nav class="hide">
+							<nav class="">
 								<a href="index.html">Home</a>
-								<a href="generic.html">Generic</a>
-								<a href="elements.html">Elements</a>
+								<a href="generic.html">Projetos</a>
+								<a href="elements.html">Publicações</a>
 							</nav>
-							<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+							
 						</div>
 					</div>
 				</div>
@@ -57,16 +57,31 @@
 				<div class="row fullscreen align-items-center justify-content-center">
 					<div class="col-lg-12">
 						<div class="banner-content">
-							<h1>Crafting <br>Best Experience</h1>
-							<p class="text-white">Art and Crafting / Acting and Philosophy</p>
+							<h1>Gustavo <br>Isidio</h1>
+							<p class="text-white">Desenvolvedor / Escritor / Cartunista</p>
+						</div>
+						<div style="margin-top:30px" class="footer-social d-flex align-items-center">
+							<a href="https://www.facebook.com/gugaisidio"><i class="fa fa-facebook"></i></a>
+							<a href="https://twitter.com/gustavo_isidio"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.instagram.com/gustavo_isidio/"><i class="fa fa-instagram"></i></a>
+							<a href="https://github.com/gustavoisidio"><i class="fa fa-github"></i></a>
+							<a href="https://www.linkedin.com/in/gustavoisidio"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- End Banner Area -->
+
+
+
+
+
+		<!-- Start Comented Area -->
+
+
 		<!-- Start Exprience Area -->
-		<section class="section-gap exprience-area">
+		<!-- <section class="section-gap exprience-area">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-md-6 mb-sm-20">
@@ -85,10 +100,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>  -->
 		<!-- End Exprience Area -->
 		<!-- Start Service Area -->
-		<section class="carousel-area section-gap relative">
+		<!-- <section class="carousel-area section-gap relative">
 			<div class="overlay overlay-bg"></div>
 			<div class="container">
 				<div class="row justify-content-end">
@@ -114,10 +129,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- End Service Area -->
 		<!-- Start Projects Area -->
-		<section class="service-area">
+		<!-- <section class="service-area">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-sm-6">
@@ -166,10 +181,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- Start Projects Area -->
 		<!-- Start Video Area -->
-		<section class="video-area section-gap relative">
+		<!-- <section class="video-area section-gap relative">
 			<div class="overlay overlay-bg"></div>
 			<div class="container">
 				<div class="row">
@@ -187,10 +202,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- End Video Area -->
 		<!-- Start Projects Area -->
-		<section class="service-area-2">
+		<!-- <section class="service-area-2">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4">
@@ -228,10 +243,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- Start Projects Area -->
 		<!-- Start Contact Area -->
-		<section class="section-gap contact-area">
+		<!-- <section class="section-gap contact-area">
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-lg-5 col-md-5">
@@ -278,11 +293,11 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- Start Contact Area -->
 
 		<!-- Strat Footer Area -->
-		<footer class="section-gap">
+		<!-- <footer class="section-gap">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-sm-6">
@@ -334,11 +349,11 @@
 						<a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="#"><i class="fa fa-twitter"></i></a>
 						<a href="#"><i class="fa fa-dribbble"></i></a>
-						<a href="#"><i class="fa fa-behance"></i></a>
+						<a href="#"><i class="fa fa-github"></i></a>
 					</div>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 		<!-- End Footer Area -->
 
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
@@ -349,5 +364,14 @@
 		<script src="js/jquery.nice-select.min.js"></script>
 		<script src="js/jquery.magnific-popup.min.js"></script>
 		<script src="js/main.js"></script>
+
+		
+		<!-- End Comented Area -->
+
+
+
+
+
+
 	</body>
 </html>
