--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 		<section class="banner-area relative">
 			<div class="overlay overlay-bg"></div>
 			<div class="container">
-				<div class="row fullscreen align-items-center justify-content-center">
-					<div class="col-lg-12">
+				<div  class="row height align-items-center justify-content-center">
+					<div style="margin-top:180px" class="col-lg-12">
 						<div class="banner-content">
 							<h1>Gustavo <br>Isidio</h1>
-							<p class="text-white">Desenvolvedor / Escritor / Cartunista</p>
+							<p class="text-white">Desenvolvedor</p>
 						</div>
 						<div style="margin-top:30px" class="footer-social d-flex align-items-center">
 							<a href="https://www.facebook.com/gugaisidio"><i class="fa fa-facebook"></i></a>
@@ -85,7 +85,7 @@
 		<!-- End Sample Area -->
 
 		<!-- Start Align Area -->
-		<div class="white-bg">
+		<!-- <div class="white-bg">
 				<div class="container">
 
 					<div class="section-top-border">
@@ -112,7 +112,7 @@
 					</div>					
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- End Align Area -->
 		
 
