--- a/projetos.html
+++ b/projetos.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Bobsled</title>
+		<title>Projetos</title>
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,400,300,500,600" rel="stylesheet">
 		<!--
 		CSS
@@ -83,7 +83,7 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="single-service d-flex flex-column align-items-center">
 							<div class="icon">
-								<span class="lnr lnr-picture"></span>
+								<span class="lnr lnr-bug"></span>
 							</div>
 							<div class="desc mt-30">
 								<h4 class="mb-10">CACO</h4>
