--- a/projetos.html
+++ b/projetos.html
@@ -91,17 +91,19 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="single-service d-flex flex-column align-items-center">
-							<div class="icon">
-								<span class="lnr lnr-wheelchair"></span>
-							</div>
-							<div class="desc mt-30">
-								<h4 class="mb-10">ChairWay</h4>
-								<p>Acessibilidade da forma certa, autonomia plena para cadeirantes.</p>
+					<a href="http://google.com">
+						<div class="col-md-4 col-sm-6">
+							<div class="single-service d-flex flex-column align-items-center">
+								<div class="icon">
+									<span class="lnr lnr-wheelchair"></span>
+								</div>
+								<div class="desc mt-30">
+									<h4 class="mb-10">ChairWay</h4>
+									<p>Acessibilidade da forma certa, autonomia plena para cadeirantes.</p>
+								</div>
 							</div>
 						</div>
-					</div>
+					</a>
 					<div class="col-md-4 col-sm-6">
 						<div class="single-service d-flex flex-column align-items-center">
 							<div class="icon">
