projetos e publicações ocultados

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 						<div class="main-menubar d-flex align-items-center">
 							<nav class="">
 								<a href="index.html">Home</a>
-								<a href="projetos/index.html">Projetos</a>
-								<a href="publications/index.html">Publicações</a>
+								<!-- <a href="projetos/index.html">Projetos</a>-->
+								<!--<a href="publications/index.html">Publicações</a>-->
 							</nav>
 							
 						</div>
