--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 <head>
+    <!--    Icones -->
+    <!--    https://fontawesome.com/v4.7.0/icons/ -->
+
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
@@ -66,7 +69,8 @@
                             <a href="https://www.instagram.com/gustavo_isidio/"><i class="fa fa-instagram"></i></a>
                             <a href="http://medium.com/@gustavo_isidio"><i class="fa fa-medium"></i></a>
 							<a href="https://github.com/gustavoisidio"><i class="fa fa-github"></i></a>
-							<a href="https://www.linkedin.com/in/gustavoisidio"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/gustavoisidio"><i class="fa fa-linkedin"></i></a>
+                            <a href="/curriculo.pdf"><i class="fa fa-file"></i></a>
 						</div>
 					</div>
 				</div>
