--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <a href="http://medium.com/@gustavo_isidio"><i class="fa fa-medium"></i></a>
 							<a href="https://github.com/gustavoisidio"><i class="fa fa-github"></i></a>
                             <a href="https://www.linkedin.com/in/gustavoisidio"><i class="fa fa-linkedin"></i></a>
-                            <a href="/curriculo.pdf"><i class="fa fa-file"></i></a>
+                            <a href="https://drive.google.com/file/d/1qO2ElUG-96fHv8GPZzLO4D8E0ahCCzyW/view?usp=sharing"><i class="fa fa-file"></i></a>
 						</div>
 					</div>
 				</div>
