--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
 			<div class="container">
 				<h3 class="text-heading">Mas quem eu sou?</h3>
 				<p class="sample-text">
-                        Um estudante de Engenharia da computação apaixonado por empreendedorismo, astronomia, aviação e inovação. Fã da Tesla e SpaceX, nunca perco um lançamento sequer e estou sempre acompanhando as últimas novidades relacionadas a carros elétricos. Na computação, sou entusiasta de linguagem funcional e adoro aprimorar meus conhecimentos em Haskell.
+					Sou um estudante de Engenharia da computação apaixonado por carros, astronomia, aviação e inovação. Fã da Tesla e SpaceX, nunca perco um lançamento sequer e estou sempre acompanhando as últimas novidades relacionadas a carros elétricos. Nas horas vagas, gosto de escrever, assistir várias séries e rever filmes da Julia Roberts e Sandra Bullock.
+				</p>
+				<p class="sample-text"></p>
+					Na computação, tenho conhecimento em desenvolvimento de aplicações móveis (Swift). Frontend web: HTML, CSS, Bootstrap. Programação em linguagem imperativa (C), orientada a objetos (C++), híbrida (Python), de descrição de hardware (Verilog, SystemVerilog), Assemblers (x86, RISC-V) e funcional (Haskell), Banco de dados (MySQL, MongoDB). Git, Firebase e IBMQ. Fui membro da Apple Developer Academy (2015), e Mind The Bizz (2017). Possuo dois prêmios em competições da Qualcomm (2017) e atualmente realizo pesquisas nas áreas de computação quântica e aprendizagem de máquina. O último estudo do qual fui co-autor, teve como objetivo analisar o desempenho e evitar overfitting durante o treinamento de um neurônio quântico usando, primordialmente, algoritmo genético.
+					
 				</p>
 			</div>
 		</section>
