--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 							<a href="https://www.facebook.com/gugaisidio"><i class="fa fa-facebook"></i></a>
 							<a href="https://twitter.com/gustavo_isidio"><i class="fa fa-twitter"></i></a>
                             <a href="https://www.instagram.com/gustavo_isidio/"><i class="fa fa-instagram"></i></a>
-                            <a href="http://medium.com/@gustavo_isidio"><i class="fa fa-medium"></i></a>
+                            <a href="https://www.instagram.com/maresdouniverso/"><i class="fa fa-instagram"></i></a>
+                            <a href="http://medium.com/@gustavoisidio"><i class="fa fa-medium"></i></a>
 							<a href="https://github.com/gustavoisidio"><i class="fa fa-github"></i></a>
                             <a href="https://www.linkedin.com/in/gustavoisidio"><i class="fa fa-linkedin"></i></a>
                             <a href="https://drive.google.com/file/d/1qO2ElUG-96fHv8GPZzLO4D8E0ahCCzyW/view?usp=sharing"><i class="fa fa-file"></i></a>
@@ -83,12 +84,16 @@
 			<div class="container">
 				<h3 class="text-heading">Mas quem eu sou?</h3>
 				<p class="sample-text">
-					Sou um estudante de Engenharia da computação apaixonado por carros, astronomia, aviação e inovação. Fã da Tesla e SpaceX, nunca perco um lançamento sequer e estou sempre acompanhando as últimas novidades relacionadas a carros elétricos. Nas horas vagas, gosto de escrever, assistir várias séries e rever filmes da Julia Roberts e Sandra Bullock.
+					Sou um estudante de Engenharia da computação apaixonado por carros, astronomia, aviação e inovação. Fã da Tesla e SpaceX, nunca perco um lançamento sequer e estou sempre acompanhando as últimas novidades relacionadas a carros elétricos. Nas horas vagas, gosto de <a href="https://www.instagram.com/maresdouniverso/">escrever</a>, assistir várias séries e rever filmes da Julia Roberts e Sandra Bullock.
 				</p>
 				<p class="sample-text"></p>
-					Na computação, tenho conhecimento em desenvolvimento de aplicações móveis (Swift). Frontend web: HTML, CSS, Bootstrap. Programação em linguagem imperativa (C), orientada a objetos (C++), híbrida (Python), de descrição de hardware (Verilog, SystemVerilog), Assemblers (x86, RISC-V) e funcional (Haskell), Banco de dados (MySQL, MongoDB). Git, Firebase e IBMQ. Fui membro da Apple Developer Academy (2015), e Mind The Bizz (2017). Possuo dois prêmios em competições da Qualcomm (2017) e atualmente realizo pesquisas nas áreas de computação quântica e aprendizagem de máquina. O último estudo do qual fui co-autor, teve como objetivo analisar o desempenho e evitar overfitting durante o treinamento de um neurônio quântico usando, primordialmente, algoritmo genético.
+					Na computação, tenho conhecimento em desenvolvimento de aplicações móveis (Swift). Frontend web: HTML, CSS, Bootstrap. Programação em linguagem imperativa (C), orientada a objetos (C++), híbrida (Python), de descrição de hardware (Verilog, SystemVerilog), Assemblers (x86, RISC-V) e funcional (Haskell), Banco de dados (MySQL, MongoDB). Git, Firebase e IBMQ.
 					
-				</p>
+                </p>
+                <p class="sample-text"></p>
+                Fui membro da Apple Developer Academy (2015), e Mind The Bizz (2017). Possuo dois prêmios em competições da Qualcomm (2017), participei de um curso sobre soluções biotecnológicas aplicadas às ações de enfrentamento à COVID-19 e atualmente realizo pesquisas nas áreas de computação quântica e aprendizagem de máquina e sequenciamento genômico do Sars-CoV-2. O último estudo do qual fui co-autor foi aceito na IJCNN, um dos maiores congressos de Redes Neurais do mundo. Ele teve como objetivo analisar o desempenho e evitar overfitting durante o treinamento de um neurônio quântico usando, primordialmente, algoritmo genético. Atualmente, participo do araboIA, um projeto de extensão com a finalidade de levar conhecimentos de computação para alunos de escolas públicas.
+                
+            </p>
 			</div>
 		</section>
 		<!-- End Sample Area -->
