--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<div style="margin-top:180px" class="col-lg-12">
 						<div class="banner-content">
 							<h1>Gustavo <br>Isidio</h1>
-							<p class="text-white">Desenvolvedor</p>
+							<p class="text-white">Desenvolvedor / Pesquisador</p>
 						</div>
 						<div style="margin-top:30px" class="footer-social d-flex align-items-center">
 							<a href="https://www.facebook.com/gugaisidio"><i class="fa fa-facebook"></i></a>
