--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<div style="margin-top:30px" class="footer-social d-flex align-items-center">
 							<a href="https://www.facebook.com/gugaisidio"><i class="fa fa-facebook"></i></a>
 							<a href="https://twitter.com/gustavo_isidio"><i class="fa fa-twitter"></i></a>
-                            <a href="https://www.instagram.com/gustavo_isidio/"><i class="fa fa-instagram"></i></a>
+                            <!-- <a href="https://www.instagram.com/gustavo_isidio/"><i class="fa fa-instagram"></i></a> -->
                             <a href="https://www.instagram.com/maresdouniverso/"><i class="fa fa-instagram"></i></a>
                             <a href="http://medium.com/@gustavoisidio"><i class="fa fa-medium"></i></a>
 							<a href="https://github.com/gustavoisidio"><i class="fa fa-github"></i></a>
