--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					
                 </p>
                 <p class="sample-text"></p>
-                Fui membro da Apple Developer Academy (2015), e Mind The Bizz (2017). Possuo dois prêmios em competições da Qualcomm (2017), participei de um curso sobre soluções biotecnológicas aplicadas às ações de enfrentamento à COVID-19 e atualmente realizo pesquisas nas áreas de computação quântica e aprendizagem de máquina e sequenciamento genômico do Sars-CoV-2. O último estudo do qual fui co-autor foi aceito na IJCNN, um dos maiores congressos de Redes Neurais do mundo. Ele teve como objetivo analisar o desempenho e evitar overfitting durante o treinamento de um neurônio quântico usando, primordialmente, algoritmo genético. Atualmente, participo do araboIA, um projeto de extensão com a finalidade de levar conhecimentos de computação para alunos de escolas públicas.
+                Fui membro da Apple Developer Academy (2015), e Mind The Bizz (2017). Possuo dois prêmios em competições da Qualcomm (2017), participei de um curso sobre soluções biotecnológicas aplicadas às ações de enfrentamento à COVID-19 (2020) e atualmente realizo pesquisas nas áreas de computação quântica e aprendizagem de máquina e sequenciamento genômico do Sars-CoV-2. O último estudo do qual fui co-autor foi aceito na IJCNN, uma das maiores conferências de Redes Neurais do mundo. Ele teve como objetivo analisar o desempenho e evitar overfitting durante o treinamento de um neurônio quântico usando, primordialmente, algoritmo genético. Atualmente, participo do araboIA, um projeto de extensão com a finalidade de levar conhecimentos de computação para alunos de escolas públicas.
                 
             </p>
 			</div>
